--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,1 +1,10 @@
-<p>header works!</p>
+<div id="header">
+    <p>MyCocktails</p>
+    <div class="links">
+
+        <a routerLink="/">Home</a>
+        <a routerLink="/about">Popular</a>
+        <a routerLink="/services">Collection</a>
+        <a routerLink="/contact">About Us</a>
+    </div>
+</div>
