--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -7,3 +7,24 @@
     font-family: Lovelace-Regular;
     src: url(../fonts/Lovelace_Regular.otf);
 }
+
+@font-face {
+    font-family: Montserrat-Thin;
+    src: url(../fonts/Montserrat-Thin.ttf);
+}
+
+@font-face {
+    font-family: Montserrat-Light;
+    src: url(../fonts/Montserrat-Light.ttf);
+}
+
+@font-face {
+    font-family: Montserrat-Regular;
+    src: url(../fonts/Montserrat-Regular.ttf);
+}
+
+@font-face {
+    font-family: Montserrat-Medium;
+    src: url(../fonts/Montserrat-Medium.ttf);
+}
+
