--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -1,5 +1,4 @@
 #header {
-    background-color: #333;
     color: #fff;
     padding: 12px;
     display: flex;
@@ -20,8 +19,9 @@
     }
 
     a{
-        font-family: Lovelace-Regular, 'sans-serif';
+        font-family: Montserrat-Light, 'sans-serif';
         font-size: 14px;
+        text-transform: uppercase;
         text-decoration: none;
         color: #fff;
         transition: color 0.3s ease;
