--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+ * {
+    background-color: #141111;
+ }
+
+ p {
+    font-family: Montserrat-Light, 'sans-serif';
+ }
