--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -3,8 +3,8 @@
     <div class="links">
 
         <a routerLink="/">Home</a>
-        <a routerLink="/about">Popular</a>
-        <a routerLink="/services">Collection</a>
-        <a routerLink="/contact">About Us</a>
+        <a routerLink="/popular">Popular</a>
+        <a routerLink="/collection">Collection</a>
+        <a routerLink="/about-us">About Us</a>
     </div>
 </div>
