--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,8 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
- * {
-    background-color: #141111;
- }
+* {
+   background-color: #141111;
+}
 
- p {
-    font-family: Montserrat-Light, 'sans-serif';
- }
+p {
+   font-family: Montserrat-Light, 'sans-serif';
+   color: white;
+}
+
+.cocktail-title{
+   font-family: Lovelace-Regular, 'sans-serif';
+   font-size: 60px;
+   margin-bottom: -10px;
+   margin-top: 10px;
+}
+
+.cocktail-description{
+   font-family: Montserrat-Light, 'sans-serif';
+   color: white;
+   margin-bottom: -10px;
+}
+
+.cocktail-instructions{
+   font-family: Montserrat-Light, 'sans-serif';
+   color: rgba(255, 255, 255, 0.4);
+}
