--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -28,3 +28,9 @@
     src: url(../fonts/Montserrat-Medium.ttf);
 }
 
+@font-face {
+    font-family: Against-Regular;
+    src: url(../fonts/Against-Regular.ttf);
+}
+
+
