Popular - visual adjustments

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -26,4 +26,10 @@ p {
 .cocktail-instructions{
    font-family: Montserrat-Light, 'sans-serif';
    color: rgba(255, 255, 255, 0.4);
+   margin-bottom: -10px;
+}
+
+.cocktail-taste{
+   font-family: Against-Regular, 'sans-serif';
+   color: #EB6A1D;
 }
