--- a/client/src/app/components/popular/popular.component.html
+++ b/client/src/app/components/popular/popular.component.html
@@ -1,13 +1,16 @@
+
+
 <div class="container">
     <!-- <div class="image-container">
       <img src="../../../assets/images/img.png" alt="Image Alt Text" />
     </div> -->
-    <div class="cocktail" *ngFor = 'let cocktail of readData'>
+    <div class="cocktail-left" *ngFor = 'let cocktail of readData'>
             <img src="../../../assets/images/img3.png" alt="Image Alt Text" />
-            <div class="cocktail-details" >
+            <div class="cocktail-details-left" >
                 <p class="cocktail-title">{{cocktail.title}}</p>
                 <p class="cocktail-description">{{cocktail.description}}</p>
                 <p class="cocktail-instructions">{{cocktail.instructions}}</p>
+                <p class="cocktail-taste">{{cocktail.taste}}</p>
 
         </div>
     </div>
