--- a/client/src/app/components/popular/popular.component.scss
+++ b/client/src/app/components/popular/popular.component.scss
@@ -1,40 +1,45 @@
+
 .container {
   display: flex;
-  
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  padding: 20px;
 }
 
-.image-container {
-    margin: 60px;
-    max-width: 50%;
-  }
-  
-  .text-container {
-    
-    display: flex;
-    flex-direction: column;
-  }
-  
-  img {
-    width: 50%;
-    width: 500px;
-    border-radius: 20px;
-  }
+img {
+  max-width: 600px;
+  height: 400px;
+  border-radius: 20px;
+}
 
-.cocktail{
+.cocktail-left{ // img and text responsive
     display: flex;
-    padding: 30px;
     flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+
+    .cocktail-details-left{
+        max-width: 400px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 20px;
+    }
 }
 
-.cocktail-details{
-    max-width: 40%;
-    padding-left: 30px;
-    display: flex;
-    flex-direction: column;
+.cocktail-right{ // img and text responsive
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row-reverse;
+  justify-content: center;
+  padding: 20px;
+
+  .cocktail-details-right{
+      max-width: 400px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-end;
+      text-align: right;
+      padding: 20px;
+  }
 }
-
-
