--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-* {
+body {
    background-color: #141111;
    scroll-behavior: smooth;
-}
+} 
 
 :root {
    --primary-color: #EB6A1D;
