--- a/client/src/app/components/collection/collection.component.scss
+++ b/client/src/app/components/collection/collection.component.scss
@@ -1,7 +1,8 @@
 .buttons{
     display: flex;
+    flex-wrap: wrap;
     gap: 12px;
-    padding: 30px;
+    padding-left: 120px;
 }
 
 .button-test{
