Added explore component

--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -4,7 +4,8 @@
 
         <a routerLink="/">Home</a>
         <a routerLink="/popular">Popular</a>
-        <a routerLink="/collection">Collection</a>
+        <a routerLink="/explore">Explore</a>
+        <a routerLink="/collection">My Collection</a>
         <a routerLink="/about-us">About Us</a>
     </div>
 </div>
