Added form to collection component

--- a/client/src/app/components/collection/collection.component.html
+++ b/client/src/app/components/collection/collection.component.html
@@ -1,10 +1,60 @@
+<div class="text-container">
+  <h1>Create your</h1>
+  <h1>own cocktail collection</h1>
+</div>
 
+<div class="form-container">
+  <button (click)="toggleSection()" class="expand-form-button">+Add new cocktail</button>
+
+  <div class="form-section" [ngClass]="{'expanded': isExpanded}">
+    <form>
+      <div class="form-group">
+        <label for="title">Title:</label>
+        <input type="text" class="input-field-text" name="title" placeholder="Enter title">
+      </div>
+      
+      <div class="form-group">
+        <label for="taste">Taste:</label>
+        <div class="taste-buttons">
+          <button type="button" (click)="setTaste('Sweet')" [ngClass]="{'selected': selectedTaste === 'Sweet'}">Sweet</button>
+          <button type="button" (click)="setTaste('Savory')" [ngClass]="{'selected': selectedTaste === 'Savory'}">Savory</button>
+          <button type="button" (click)="setTaste('Spicy')" [ngClass]="{'selected': selectedTaste === 'Spicy'}">Spicy</button>
+        </div>
+      </div>
+
+      <div class="textbox-field-container">
+        <div class="form-group">
+          <label for="description">Description:</label>
+          <input type="text" class="input-field-box" name="description" placeholder="Enter description">
+        </div>
+        <div class="form-group">
+          <label for="instructions">Instructions:</label>
+          <input type="text" class="input-field-box" name="instructions" placeholder="Enter instructions">
+        </div>
+      </div>
+
+      <div class="submit-button">
+        <button type="button" (click)="submitForm()">Submit</button>
+      </div>
+
+    </form>
+  </div>
+</div>
+
+
+
+
+
+<!-- 
 <div class="buttons">
     <div *ngFor="let taste of tastes">
         <button class="button-test" (click)="getCocktailByType(taste)">{{taste}}</button>
     </div>
-</div>
+</div> -->
 
+
+
+<!-- 
 <div class="container">
     <div *ngFor="let cocktail of tasteCocktails; let i = index" [ngClass]="{'cocktail-left': i % 2 === 0, 'cocktail-right': i % 2 !== 0}">
       <img src="../../../assets/images/img3.png" alt="Image Alt Text" />
@@ -16,4 +66,4 @@
       </div>
     </div>
   </div>
-  
+   -->
