--- a/client/src/app/components/collection/collection.component.html
+++ b/client/src/app/components/collection/collection.component.html
@@ -16,9 +16,9 @@
       <div class="form-group">
         <label for="taste">Taste:</label>
         <div class="taste-buttons">
-          <button type="button" (click)="setTaste('Sweet')" [ngClass]="{'selected': selectedTaste === 'Sweet'}">Sweet</button>
-          <button type="button" (click)="setTaste('Savory')" [ngClass]="{'selected': selectedTaste === 'Savory'}">Savory</button>
-          <button type="button" (click)="setTaste('Spicy')" [ngClass]="{'selected': selectedTaste === 'Spicy'}">Spicy</button>
+          <button type="button" (click)="setTaste('Sweet')" [class.selected]="selectedTaste === 'Sweet'">Sweet</button>
+          <button type="button" (click)="setTaste('Savory')" [class.selected]="selectedTaste === 'Savory'">Savory</button>
+          <button type="button" (click)="setTaste('Spicy')" [class.selected]="selectedTaste === 'Spicy'">Spicy</button>
         </div>
       </div>
 
@@ -40,6 +40,7 @@
     </form>
   </div>
 </div>
+
 
 
 
