--- a/client/src/app/components/collection/collection.component.scss
+++ b/client/src/app/components/collection/collection.component.scss
@@ -213,7 +213,7 @@ button:hover {
 .container {
 z-index: -1;
 display: flex;
-flex-direction: column;
+flex-direction:column-reverse;
 justify-content: center;
 }
 
