--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -54,6 +54,33 @@ h1{
    font-size: 60px;
 }
 
+.hidden{
+   opacity: 0;
+   transition: all 1s;
+   transform: translateX(-100px);
+   filter: blur(3px);
+   z-index: 1;
+}
+
+.hidden-slow{
+   opacity: 0;
+   transition: all 1s ease-in-out;
+   transform: translateX(-100px);
+   filter: blur(3px);
+   z-index: -1;
+}
+
+.show{
+   opacity: 1;
+   filter: blur(0);
+   transform: translateX(0);
+}
+@media(prefers-reduced-motion: reduce){
+   .hidden{
+       transition: none;
+   }
+}
+
 // .cocktail-title{
 //    font-family: Against-Regular, 'sans-serif';
 //    font-size: 60px;
