--- a/client/src/app/components/explore/explore.component.html
+++ b/client/src/app/components/explore/explore.component.html
@@ -1,11 +1,13 @@
-
-<div class="buttons">
-    <div *ngFor="let taste of tastes">
-        <button class="button-test" (click)="getCocktailByType(taste)">{{taste}}</button>
-    </div>
+<div class="hidden">
+  <div class="buttons">
+      <div *ngFor="let taste of tastes">
+          <button class="button-test" (click)="getCocktailByType(taste)">{{taste}}</button>
+      </div>
+  </div>
 </div>
 
-<div class="container">
+<div class="hidden-slow">
+  <div class="container">
     <div *ngFor="let cocktail of tasteCocktails; let i = index" [ngClass]="{'cocktail-left': i % 2 === 0, 'cocktail-right': i % 2 !== 0}">
       <img src="../../../assets/images/img3.png" alt="Image Alt Text" />
       <div [ngClass]="{'cocktail-details-left': i % 2 === 0, 'cocktail-details-right': i % 2 !== 0}">
@@ -16,4 +18,5 @@
       </div>
     </div>
   </div>
+</div>
   
