Popular tab - responsive

--- a/client/src/app/components/popular/popular.component.scss
+++ b/client/src/app/components/popular/popular.component.scss
@@ -1,4 +1,91 @@
-h1{
+// h1{
+//   color: var(--primary-color);
+//   text-shadow: 0px 8px 6px rgba(0, 0, 0, 0.552);
+//   line-height: 40%;
+//   display: flex;
+//   padding-left: 80px;
+//   z-index: 100;
+//   transform: translate(2%, 100%);
+// }
+
+// .text-container{
+//   margin-top: -30px;
+// }
+
+// *{
+//   color: white;
+// }
+// .container {
+//   z-index: -1;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+// }
+
+// img {
+//   max-width: 600px;
+//   height: 400px;
+//   border-radius: 20px;
+// }
+
+// .cocktail-left{ // img and text responsive
+//     display: flex;
+//     flex-wrap: wrap;
+//     justify-content: center;
+//     padding: 20px;
+
+//     .cocktail-details-left{
+//         max-width: 400px;
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: center;
+//         padding: 20px;
+//     }
+// }
+
+// .cocktail-right{ // img and text responsive
+//   display: flex;
+//   flex-wrap: wrap;
+//   flex-direction: row-reverse;
+//   justify-content: center;
+//   padding: 20px;
+
+//   .cocktail-details-right{
+//       max-width: 400px;
+//       display: flex;
+//       flex-direction: column;
+//       justify-content: center;
+//       align-items: flex-end;
+//       text-align: right;
+//       padding: 20px;
+//   }
+// }
+
+// .cocktail-title{
+//   font-family: Against-Regular, 'sans-serif';
+//   font-size: 60px;
+//   margin-bottom: -10px;
+//   margin-top: 10px;
+// }
+
+// .cocktail-description{
+//   font-family: Montserrat-Light, 'sans-serif';
+//   color: white;
+//   margin-bottom: -10px;
+// }
+
+// .cocktail-instructions{
+//   font-family: Montserrat-Light, 'sans-serif';
+//   color: rgba(255, 255, 255, 0.4);
+//   margin-bottom: -10px;
+// }
+
+// .cocktail-taste{
+//   font-family: Against-Regular, 'sans-serif';
+//   color: var(--primary-color);
+// }
+
+h1 {
   color: var(--primary-color);
   text-shadow: 0px 8px 6px rgba(0, 0, 0, 0.552);
   line-height: 40%;
@@ -8,13 +95,14 @@ h1{
   transform: translate(2%, 100%);
 }
 
-.text-container{
+.text-container {
   margin-top: -30px;
 }
 
-*{
+* {
   color: white;
 }
+
 .container {
   z-index: -1;
   display: flex;
@@ -24,23 +112,8 @@ h1{
 
 img {
   max-width: 600px;
-  height: 400px;
+  height: auto;
   border-radius: 20px;
-}
-
-.cocktail-left{ // img and text responsive
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 20px;
-
-    .cocktail-details-left{
-        max-width: 400px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 20px;
-    }
 }
 
 .cocktail-right{ // img and text responsive
@@ -61,26 +134,81 @@ img {
   }
 }
 
-.cocktail-title{
+.cocktail-left{ // img and text responsive
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+
+    .cocktail-details-left{
+        max-width: 400px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 20px;
+    }
+}
+
+.cocktail-title {
   font-family: Against-Regular, 'sans-serif';
   font-size: 60px;
   margin-bottom: -10px;
   margin-top: 10px;
 }
 
-.cocktail-description{
+.cocktail-description {
   font-family: Montserrat-Light, 'sans-serif';
   color: white;
   margin-bottom: -10px;
 }
 
-.cocktail-instructions{
+.cocktail-instructions {
   font-family: Montserrat-Light, 'sans-serif';
   color: rgba(255, 255, 255, 0.4);
   margin-bottom: -10px;
 }
 
-.cocktail-taste{
+.cocktail-taste {
   font-family: Against-Regular, 'sans-serif';
   color: var(--primary-color);
+}
+
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 40px; 
+    padding-left: 20px; 
+  }
+  
+  .text-container {
+    margin-top: -10px; 
+  }
+
+  .cocktail-title {
+    font-size: 40px; 
+  }
+
+  img{
+    max-width: 100%; 
+    height: auto; 
+  }
+}
+
+@media screen and (max-width: 480px) {
+  h1 {
+    font-size: 30px; 
+    padding-left: 10px; 
+  }
+  
+  .text-container {
+    margin-top: 0; 
+  }
+
+  .cocktail-title {
+    font-size: 30px; 
+  }
+
+  img{
+    max-width: 100%;
+    height: auto;
+  }
 }
