--- a/client/src/app/components/collection/collection.component.html
+++ b/client/src/app/components/collection/collection.component.html
@@ -1,7 +1,6 @@
 <div class="hidden">
   <div class="text-container">
-    <h1>Create your</h1>
-    <h1>own cocktail collection</h1>
+    <h1>Create your<br>own cocktail collection</h1>
   </div>
 </div>
 
