--- a/client/src/app/components/collection/collection.component.scss
+++ b/client/src/app/components/collection/collection.component.scss
@@ -223,6 +223,14 @@ height: 400px;
 border-radius: 20px;
 }
 
+img.icon{
+    width: 24px;
+    height: 24px;
+    filter: brightness(0) invert(1);
+    cursor: pointer;
+    align-content: flex-end;
+}
+
 .cocktail-left{ // img and text responsive
     display: flex;
     flex-wrap: wrap;
