--- a/client/src/app/components/popular/popular.component.html
+++ b/client/src/app/components/popular/popular.component.html
@@ -14,6 +14,7 @@
       <p class="cocktail-description">{{ cocktail.description }}</p>
       <p class="cocktail-instructions">{{ cocktail.instructions }}</p>
       <p class="cocktail-taste">{{ cocktail.taste }}</p>
+      <p style="cursor: pointer;" (click)="addToMyCollection(cocktail)">+Add to My Collection</p>
     </div>
   </div>
 </div>
