collection component - responsive form

--- a/client/src/app/components/collection/collection.component.html
+++ b/client/src/app/components/collection/collection.component.html
@@ -27,11 +27,11 @@
         <div class="textbox-field-container">
           <div class="form-group">
             <label for="description">Description:</label>
-            <input type="text" class="input-field-box" name="description" placeholder="Enter description">
+            <textarea type="text" class="input-field-box" name="description" placeholder="Enter description"></textarea>
           </div>
           <div class="form-group">
             <label for="instructions">Instructions:</label>
-            <input type="text" class="input-field-box" name="instructions" placeholder="Enter instructions">
+            <textarea type="text" class="input-field-box" name="instructions" placeholder="Enter instructions"></textarea>
           </div>
         </div>
   
