--- a/client/src/app/components/collection/collection.component.scss
+++ b/client/src/app/components/collection/collection.component.scss
@@ -21,6 +21,7 @@ h1{
     justify-content: center;
     align-items: center;
     padding: 20px;
+    max-width: 800px 100%;
 }
 
 .expand-form-button{
@@ -31,7 +32,7 @@ h1{
     padding: 14px;
     border-radius: 10px;
     background: rgba(255, 255, 255, 0.13);
-    width: 800px;
+    width: 70%;
     height: 50px;
     display: flex;
     justify-content: flex-start;
@@ -50,8 +51,8 @@ h1{
     background: rgba(255, 255, 255, 0.13);
     color: white;
     font-family: Montserrat, 'sans-serif';
-    width: 800px;
-    height: 400px;
+    width: 70%;
+    height: 100%;
 }
 
 input{
@@ -59,7 +60,17 @@ input{
     flex-wrap: wrap;
 }
 
+textarea{
+    border: none;
+    flex-wrap: wrap;
+}
+
 input:focus {
+    outline:none;
+    flex-wrap: wrap;
+}
+
+textarea:focus {
     outline:none;
     flex-wrap: wrap;
 }
@@ -83,7 +94,7 @@ label{
     color: white;
     border-radius: 10px;
     background: rgba(255, 255, 255, 0.13);
-    width: 350px;
+    width: 80%;
     height: 36px;
     padding: 0 12px 0 12px;
     display: flex;
@@ -97,21 +108,23 @@ label{
     color: white;
     border-radius: 10px;
     background: rgba(255, 255, 255, 0.13);
-    width: 350px;
+    width: 100%;
     height: 100px;
-    padding: 0 12px 0 12px;
+    //padding: 0 12px 0 12px;
     word-wrap: break-word;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
+    margin-right: 12px;
+    padding-left: 8px;
 }
 
 .textbox-field-container{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: center;
+    justify-content: start;
     align-items: flex-start;
 }
 
@@ -162,8 +175,9 @@ button:hover {
   
   
 .submit-button{
-    padding-top: 12px;
-    padding-left: 620px;
+    // padding-top: 12px;
+    // padding-left: 620px;
+    padding: 12px;
 }
 
 .fade {
