--- a/client/src/app/components/collection/collection.component.scss
+++ b/client/src/app/components/collection/collection.component.scss
@@ -238,7 +238,8 @@ justify-content: center;
 }
 
 img {
-max-width: 600px;
+max-width: 600px ;
+width: 100%;
 height: 400px;
 border-radius: 20px;
 }
@@ -308,10 +309,16 @@ font-family: Against-Regular, 'sans-serif';
 color: var(--primary-color);
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1100px) and (min-width: 768px) {
     h1 {
       font-size: 50px; 
       padding-left: 20px; 
+    }
+
+    img{
+      width: 100%;
+      max-width: 400px;
+      height:  266px;
     }
   }
   
@@ -334,9 +341,37 @@ color: var(--primary-color);
       max-width: 100%; 
       height: auto; 
     }
+    .input-field-box{
+      font-size: 14px;
+    }
+    .form-container{
+      max-width: 90%;
+      font-size: 14px;
   }
   
-  @media screen and (max-width: 480px) {
+  .expand-form-button{
+      width: 90%;
+      font-size: 14px;
+  }
+  
+  .form-section{
+    width: 90%;
+    font-size: 14px;
+  }
+  .input-field-text{
+    font-size: 14px;
+  }
+.button{
+    width: 120px;
+    height: 34px;
+    font-size: 14px;
+  }
+
+
+
+  }
+  
+  @media screen and (max-width: 520px) {
     h1 {
       font-size: 30px; 
       padding-left: 10px; 
@@ -354,4 +389,24 @@ color: var(--primary-color);
       max-width: 100%;
       height: auto;
     }
+    .form-container{
+      max-width: 100%;
+  }
+
+  .form-group{
+    width: 90%;
+  }
+  
+  .expand-form-button{
+      width: 100%;
+  }
+  
+  .form-section{
+    width: 100%;
+  }
+  button{
+    width: 100px;
+    height: 30px;
+    font-size: 12px;
+  } 
   }
