--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -6,6 +6,6 @@
         <a routerLink="/popular">Popular</a>
         <a routerLink="/explore">Explore</a>
         <a routerLink="/collection">My Collection</a>
-        <a routerLink="/about-us">About Us</a>
+        <a routerLink="/login">Login</a>
     </div>
 </div>
