--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,11 +1,10 @@
 <div id="header">
     <p>MyCocktails</p>
     <div class="links">
-
-        <a routerLink="/">Home</a>
-        <a routerLink="/popular">Popular</a>
-        <a routerLink="/explore">Explore</a>
-        <a routerLink="/collection">My Collection</a>
-        <a routerLink="/login">Login</a>
+        <a [ngClass]="{'not-logged-in-link': !isLoggedIn()}" routerLink="/">Home</a>
+        <a [ngClass]="{'not-logged-in-link': !isLoggedIn()}" routerLink="/popular">Popular</a>
+        <a [ngClass]="{'not-logged-in-link': !isLoggedIn()}" routerLink="/explore">Explore</a>
+        <a [ngClass]="{'not-logged-in-link': !isLoggedIn()}" routerLink="/collection">My Collection</a>
+        <a [ngClass]="{'not-logged-in-link': !isLoggedIn()}" routerLink="/login">Login</a>
     </div>
 </div>
