header logout button & login animation

--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -5,6 +5,6 @@
         <a [ngClass]="{'not-logged-in-link': !isLoggedIn()}" routerLink="/popular">Popular</a>
         <a [ngClass]="{'not-logged-in-link': !isLoggedIn()}" routerLink="/explore">Explore</a>
         <a [ngClass]="{'not-logged-in-link': !isLoggedIn()}" routerLink="/collection">My Collection</a>
-        <a [ngClass]="{'not-logged-in-link': !isLoggedIn()}" routerLink="/login">Login</a>
+        <a [ngClass]="{'not-logged-in-link': !isLoggedIn()}" (click)="logout()">Logout</a>
     </div>
 </div>
