--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -1,3 +1,4 @@
+<div class="hidden">
 <div class="login-container">
     <h2>Login</h2>
     <form (ngSubmit)="onSubmit()">
@@ -12,6 +13,6 @@
       <button type="submit">Login</button>
     </form>
   </div>
-  
+</div>
 
-  <button (click)="logout()">Logout</button>
+  <!-- <button (click)="logout()">Logout</button> -->
