--- a/client/src/app/components/explore/explore.component.html
+++ b/client/src/app/components/explore/explore.component.html
@@ -14,7 +14,7 @@
 <div class="hidden-slow">
   <div class="container">
     <div *ngFor="let cocktail of tasteCocktails; let i = index" [ngClass]="{'cocktail-left': i % 2 === 0, 'cocktail-right': i % 2 !== 0}">
-      <img src="../../../assets/images/img3.png" alt="Image Alt Text" />
+      <img src={{cocktail.image}} alt="Image Alt Text" />
       <div [ngClass]="{'cocktail-details-left': i % 2 === 0, 'cocktail-details-right': i % 2 !== 0}">
         <p class="cocktail-title">{{ cocktail.title }}</p>
         <p class="cocktail-description">{{ cocktail.description }}</p>
