--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -43,3 +43,109 @@
         color: #333;
     }
 }
+
+.not-logged-in-link {
+    color: #333;
+    cursor: not-allowed;
+}
+
+.not-logged-in-link:hover {
+    color: #333;
+}
+
+
+
+* {
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 12px;
+  }
+  body {
+    font-family: Montserrat;
+  }
+  nav {
+    color: rgb(255, 255, 255);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  nav p{
+    font-family: Against-Regular, 'sans-serif';
+    font-size: 30px;
+    margin-left: 20px;
+}
+  nav .mainMenu {
+    display: flex;
+    list-style: none;
+  }
+  nav .mainMenu li a {
+    font-family: Montserrat-Light, 'sans-serif';
+    font-size: 14px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #fff;
+    transition: color 0.3s ease;
+    padding: 18px;
+    cursor: pointer;
+  }
+  nav .mainMenu li a:hover{
+    color: #EB6A1D; 
+}
+  nav .openMenu {
+    margin: 20px;
+    display: none;
+    cursor: pointer;
+}
+nav img {
+    filter: brightness(0) invert(1);
+    width: 60px;
+    height: 60px;
+    margin: 6px;
+    cursor: pointer;
+  }
+  nav .mainMenu .closeMenu {
+    font-size: 2rem;
+    display: none;
+    cursor: pointer;
+  }
+  nav .logo {
+    margin: 6px;
+    cursor: pointer;
+    text-transform: uppercase;
+  }
+
+  @media (max-width: 860px) {
+    nav .mainMenu {
+      height: 40%;
+      position: fixed;
+      top: 0px;
+      right: 0px;
+      left: 0px;
+      z-index: 10;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: rgba(0, 0, 0, 0.538);
+      backdrop-filter: blur(5px);
+      transition: top 1s ease 0s;
+      display: none;
+    }
+    nav .mainMenu .closeMenu {
+      display: block;
+      position: absolute;
+      top: 20px;
+      right: 20px;
+    }
+    nav .openMenu {
+      display: block;
+    }
+    nav .mainMenu li a:hover {
+      background: none;
+      color: rgb(255, 123, 0);
+    }
+    .icons i {
+      display: inline-block;
+      padding: 12px;
+    }
+  }
+  
