--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -16,7 +16,7 @@
           </div>
           <p>Already have an account? <span style="cursor: pointer; color:#EB6A1D" (click)="navigateToLogin()">Login</span></p>
 
-          <button type="submit">Login</button>
+          <button type="submit">Register</button>
         </form>
       </div>
     </div>
